Coorection non de l'auteur

--- a/Script/shiny_covid_cedeao.Rmd
+++ b/Script/shiny_covid_cedeao.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "COVID-19 CEDEAO"
-author: "A. ZAKARI"
+author: "Abdoussalam ZAKARI"
 output: 
   flexdashboard::flex_dashboard:
     orientation: rows
